Fix scrollbar showing by puting phaser canvas in a wrapper div and adding display: block to the canvas.

--- a/client/src/index.scss
+++ b/client/src/index.scss
@@ -16,6 +16,12 @@ body {
   box-sizing: inherit;
 }
 
+#phaser-container {
+  canvas {
+    display: block;
+  }
+}
+
 .video-grid {
   display: grid;
   grid-template-columns: repeat(auto-fill, 160px);
